tests/snapshots/golden_snapshot_tests__golden_config_error_merge.snap
---
source: tests/golden_snapshot_tests.rs
expression: err.to_string()
---
merge conflict: conflicting default_backend values
