tests/snapshots/golden_snapshot_tests__golden_config_error_not_found.snap
---
source: tests/golden_snapshot_tests.rs
expression: err.to_string()
---
config file not found: /etc/abp/config.toml
