tests/snapshots/golden_snapshot_tests__golden_config_error_parse.snap
---
source: tests/golden_snapshot_tests.rs
expression: err.to_string()
---
failed to parse config: expected value, found newline
