tests/snapshots/golden_snapshot_tests__golden_config_error_validation.snap
---
source: tests/golden_snapshot_tests.rs
expression: err.to_string()
---
config validation failed: ["invalid log_level 'verbose'", "backend 'x': command empty"]
