tests/snapshots/golden_snapshot_tests__golden_envelope_event.snap
---
source: tests/golden_snapshot_tests.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "assistant_message",
    "text": "Working on it"
  }
}
