tests/snapshots/golden_snapshot_tests__golden_envelope_event_tool_call.snap
---
source: tests/golden_snapshot_tests.rs
expression: env
---
{
  "t": "event",
  "ref_id": "run-001",
  "event": {
    "ts": "2025-01-15T12:00:00Z",
    "type": "tool_call",
    "tool_name": "Write",
    "tool_use_id": "tu_100",
    "parent_tool_use_id": null,
    "input": {
      "content": "fn hello() {}",
      "path": "src/lib.rs"
    }
  }
}
