tests/snapshots/golden_snapshot_tests__golden_envelope_fatal_with_error_code.snap
---
source: tests/golden_snapshot_tests.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-001",
  "error": "backend not found",
  "error_code": "backend_not_found"
}
