tests/snapshots/golden_snapshot_tests__golden_envelope_fatal_with_ref.snap
---
source: tests/golden_snapshot_tests.rs
expression: env
---
{
  "t": "fatal",
  "ref_id": "run-001",
  "error": "out of memory"
}
