tests/snapshots/golden_snapshot_tests__golden_envelope_hello.snap
---
source: tests/golden_snapshot_tests.rs
expression: json
---
{
  "t": "hello",
  "contract_version": "abp/v0.1",
  "backend": {
    "id": "sidecar:node",
    "backend_version": "1.0.0",
    "adapter_version": "0.1.0"
  },
  "capabilities": {
    "streaming": "native",
    "tool_read": "native"
  },
  "mode": "mapped"
}
